# MetaLang

./: .clang-format  .gitignore  CMakeLists.txt  build.gradle.kts  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
meta_lang/src/parser/: char_equivalent.hpp  keyword_type.hpp  lexer.cc  lexer.hpp  lexer_error.hpp  lexer_state.hpp  token.hpp  token_type.hpp
meta_lang/src/parser/meta/: meta_grammar.cc  meta_grammar.hpp
meta_lang/src/util/: arithmetic.hpp  expecetd.hpp  file_reader.hpp  macro_map.hpp  macro_util.hpp  string_like.hpp  utf8.hpp
meta_lang/src/util/concept/: string_like.hpp
meta_lang/src/util/fs/: byte_reader.hpp  file_range.hpp  file_range_builder.hpp
meta_lang/src/util/inline/: force_inline.hpp
meta_lang/src/util/string/: codepoint_view.hpp  utf8.hpp
meta_lang/test/parser/: test_lexer.cc
meta_lang/test/parser/meta/: test_1.grammar  test_2.grammar  test_3.grammar  test_meta_grammar.cc
meta_lang/test/util/: try_expected.hpp
meta_lang/test/util/fs/: test_byte_reader.cc  test_file_range_builder.cc  with_space.txt
meta_lang/test/util/string/: test.txt  test_codepoint_view.cc  test_utf8.cc
src/main/antlr/: CommonLexRules.g4  MetaLang.g4
src/main/kotlin/io/github/linhelurking/meta_lang/: main.kt
src/main/kotlin/io/github/linhelurking/meta_lang/parser/: FormatVisitor.kt
